--- a/css/estilos.css
+++ b/css/estilos.css
@@ -21,17 +21,20 @@ main img{
 }
 .carousel-item{width: auto;height: 400px;}
 .sec{
-    position: absolute;
-	height: auto;
+    height: auto;
 	width: auto;
 	left: 50%;
 	top: 50%;
 }
 .carousel-caption {
-text-shadow: black; 
+text-shadow:  20px black; 
     color: white;
 }   
 .carousel-inner img{width: 100%;height: 100%;background-image: cover;}
 footer{
     padding: 15px
+}
+.icono{
+    height: 30px;
+    align-content: center;
 }
